@@ -5,7 +5,8 @@
        (no change to results, but gets rid of warning)
 
        allow svyby() to have a vector as the first argument
-       
+
+       force character vectors to factor in id= argument of svydesign (fixes Stack Overflow 54239063)
 
 3.35-2 The previous (3.34) patch to allow offsets in svymle() didn't work with non-trivial linear predictors
        for multiple parameters. (reported by Beat Hulliger)
